--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "^11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-helmet": "^6.1.0",
     "sass": "^1.42.1"
   }
 }
