--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^11.0.0",
+    "next": "11.1.2",
     "react": "17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
-    "sass": "^1.42.1"
+    "sass": "1.43.2"
   }
 }
