--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "scripts": {
     "dev": "next dev -p 4000",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "postinstall": "husky install"
   },
   "dependencies": {
-    "next": "11.1.2",
     "@apollo/client": "^3.4.16",
     "date-fns": "^2.25.0",
+    "next": "11.1.2",
     "react": "17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
     "sass": "1.43.2"
+  },
+  "devDependencies": {
+    "eslint": "7.32.0",
+    "eslint-config-next": "12.0.8",
+    "husky": "^7.0.4"
   }
 }
