--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.4.16",
     "date-fns": "^2.25.0",
+    "graphql": "^16.3.0",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-burger-menu": "^3.0.6",
