--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-burger-menu": "^3.0.6",
+    "react-cookie-consent": "^7.4.1",
     "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
     "react-modal": "^3.14.4",
