--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learn-starter",
+  "name": "fiona-ross",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -28,5 +28,8 @@
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.8",
     "husky": "^7.0.4"
+  },
+  "engines": {
+    "node": "16.4.2"
   }
 }
