--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-modal": "^3.14.4",
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
-    "sass": "1.43.2"
+    "sass": "1.43.2",
+    "sharp": "^0.30.4"
   },
   "devDependencies": {
     "eslint": "7.32.0",
