--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@apollo/client": "^3.4.16",
     "date-fns": "^2.25.0",
+    "framer-motion": "^10.12.4",
     "graphql": "^16.3.0",
     "next": "11.1.2",
-    "react": "17.0.2",
+    "react": "18.1.0",
     "react-burger-menu": "^3.0.6",
     "react-cookie-consent": "^7.4.1",
-    "react-dom": "17.0.2",
+    "react-dom": "18.1.0",
     "react-helmet": "^6.1.0",
     "react-modal": "^3.14.4",
     "react-swipeable-views": "^0.14.0",
